# rpy-template

./: .gitignore  LICENSE  README.md  directory.path  project_readme.md  pyproject.toml
rpytemplate/: __init__.py  rdp_client.py
utils/: build.py  quickstart.py  update.py
