[tool.poetry]
name = "rpytemplate"
version = "0.1.0"
description = ""
authors = ["Rishika Mohanta <neurorishika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
ipython = "^8.14.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
argparse = "^1.4.0"
mkinit = "^1.0.0"
cryptography = "^41.0.2"
lazy-loader = "^0.3"
split-file-reader = "^0.1.4"
statannotations = "^0.5.0"
joblib = "^1.3.1"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
